<resources>
    <string name="app_name">ÐChat</string>

    <!-- SelectAuthFragment -->
    <string name="select_auth_sign_in">Sign In</string>
    <string name="select_auth_sign_up">Sign Up</string>
    <string name="select_auth_powered_by_textile">Powered by Textile.io</string>

    <!-- CreateMnemonicFragment -->
    <string name="create_mnemonic_toolbar_title">Create mnemonic</string>
    <string name="create_mnemonic_manual">We do not use login and password to identify you. Instead we use mnemonic phrases. Write down secret phrase and show it to no one.</string>
    <string name="create_mnemonic_length_12">12 words</string>
    <string name="create_mnemonic_length_24">24 words</string>
    <string name="create_mnemonic_copy_button"><u>Click to copy</u></string>
    <string name="create_mnemonic_continue_btn">I have written it down</string>

    <!-- CheckMnemonicFragment -->
    <string name="check_mnemonic_toolbar_title">Check mnemonic</string>
    <string name="check_mnemonic_continue_btn">Continue</string>
    <string name="check_mnemonic_hint">Select at least %1$d words in a correct order.</string>
    <string name="check_mnemonic_skip_btn">Skip</string>
    <string name="check_mnemonic_skip_dialog_title">You will not see phrase again. Are you sure?</string>
    <string name="check_mnemonic_skip_positive_ans">I am sure!</string>
    <string name="check_mnemonic_skip_negative_ans">No, let\'s get back</string>

    <!-- CreateProfileFragment -->
    <string name="create_profile_toolbar_title">Customize profile</string>
    <string name="create_profile_name_hint">Name</string>
    <string name="create_profile_finish_btn">Finish</string>

    <!-- AddContactFragment -->
    <string name="add_contact_toolbar_title">Add contact</string>
    <string name="add_contact_search_hint">Name or ID</string>
    <string name="add_contact_nothing_found">No users found</string>

    <!-- SelectMembersFragment -->
    <string name="select_members_toolbar_title">New chat</string>
    <string name="select_members_search_bar_hint">Invite people…</string>

    <!-- CreateChatFragment -->
    <string name="create_chat_toolbar_title">New chat</string>
    <string name="create_chat_chat_name_hint">Enter chat name</string>

    <!-- MessageListFragment -->
    <string name="message_list_msg_input_hint">Message</string>

    <!-- ChatListFragment -->
    <string name="chat_list_add_cafe_item">Register cafe</string>
    <string name="chat_list_cafe_url_hint">Cafe URL</string>
    <string name="chat_list_cafe_token_hint">Cafe token</string>
    <string name="chat_list_register_btn">Connect</string>

    <!-- EnterMnemonicFragment -->
    <string name="enter_mnemonic_toolbar_title">Enter mnemonic</string>
    <string name="enter_mnemonic_mnemonic_hint">Enter your mnemonic</string>
</resources>