<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.legion1900.dchat.view.auth.selectauth.SelectAuthFragment">

    <TextView
        android:id="@+id/app_name"
        style="@style/TextTitle"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/DefaultButton.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_auth_sign_in"
        app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintVertical_bias=".55"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent=".4" />

    <Button
        android:id="@+id/sign_up_btn"
        style="@style/DefaultButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_auth_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/powered_by_textile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>