<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.legion1900.dchat.view.chat.addcontact.AddContactFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/AccentToolbar"
        android:theme="@style/ToolbarAccentTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="@string/add_contact_toolbar_title" />

    <EditText
        android:inputType="text"
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:hint="@string/add_contact_search_hint"
        app:layout_constraintEnd_toStartOf="@id/search_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent=".8"
        tools:ignore="Autofill" />

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/search_input"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_input"
        app:layout_constraintTop_toTopOf="@id/search_input"
        app:srcCompat="@drawable/ic_search" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3" />

    <TextView
        android:id="@+id/empty_placeholder"
        style="@style/DefaultText.EmptyPlaceholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_contact_nothing_found"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input" />

</androidx.constraintlayout.widget.ConstraintLayout>